-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.8.0
-
3
-
9223372036854775807
crash> bt PID: 231396 TASK: ffff880b73c5d540 CPU: 4 COMMAND: "mdt01_088" #0 [ffff880d7e5057e8] machine_kexec at ffffffff81038f3b #1 [ffff880d7e505848] crash_kexec at ffffffff810c5b02 #2 [ffff880d7e505918] panic at ffffffff81524e75 #3 [ffff880d7e505998] lbug_with_loc at ffffffffa04feeeb [libcfs] #4 [ffff880d7e5059b8] osp_sync_add_rec at ffffffffa10708eb [osp] #5 [ffff880d7e505a28] osp_sync_add at ffffffffa1070b07 [osp] #6 [ffff880d7e505a48] osp_object_destroy at ffffffffa1062346 [osp] #7 [ffff880d7e505a88] lod_object_destroy at ffffffffa1020b07 [lod] #8 [ffff880d7e505ac8] mdd_finish_unlink at ffffffffa0dc7538 [mdd] #9 [ffff880d7e505b38] mdd_unlink at ffffffffa0dc814a [mdd] #10 [ffff880d7e505bf8] mdo_unlink at ffffffffa0e36458 [mdt] #11 [ffff880d7e505c08] mdt_reint_unlink at ffffffffa0e3a24b [mdt] #12 [ffff880d7e505c98] mdt_reint_rec at ffffffffa0e364ed [mdt] #13 [ffff880d7e505cc8] mdt_reint_internal at ffffffffa0e1ca0b [mdt] #14 [ffff880d7e505d08] mdt_reint at ffffffffa0e1d13b [mdt] #15 [ffff880d7e505d48] tgt_request_handle at ffffffffa092287e [ptlrpc] #16 [ffff880d7e505da8] ptlrpc_main at ffffffffa08d24d1 [ptlrpc] #17 [ffff880d7e505ee8] kthread at ffffffff8109ac66 #18 [ffff880d7e505f48] kernel_thread at ffffffff8100c20a
Crash was happened due
<3>[11441257.937330] LustreError: 185667:0:(osp_sync.c:1544:osp_sync_id_get()) snx11126-OST0045-osc-MDT0000: next 0, last synced 4294967205 <0>[11441257.940592] LustreError: 231396:0:(osp_sync.c:1545:osp_sync_id_get()) LBUG
The root cause is u32 overflow for tr->otr_next_id.
- is duplicated by
-
LU-9626 LustreError: 16331:0:(osp_sync.c:1677:osp_sync_id_get()) LBUG
-
- Resolved
-